Archive2/cf/4f7903e4a956ef/output
main.cpp: In lambda function:
main.cpp:5:42: error: ‘f’ was not declared in this scope
     std::async(std::launch::async, []{ f(); });
                                          ^
main.cpp: In lambda function:
main.cpp:6:42: error: ‘g’ was not declared in this scope
     std::async(std::launch::async, []{ g(); });  // does not run until f() completes
                                          ^
